<resources>
    <string name="app_name">SumsiMalwettbewerb</string>
    <string name="bank_logo">Bank-Logo</string>
    <string name="sumsi_logo">Sumsi-Logo</string>
    <string name="sumsi_welcome_message"><b>Liebe Kinder, liebe Eltern!</b>
         Wie jedes Jahr gibt es auch heuer unseren traditionellen Sumsi Malwettbewerb.
         Wieder digital, wieder mit Voting und großer Online-Galerie.
         Jedes Elternteil, das bis zum <b>Invalid Date</b>  die Zeichnung seines Kindes mithilfe des nachstehenden Kontaktformulares hochlädt und einreicht, wird anschließend in der großen Sumsi Galerie auf www.raiffeisen-sumsi.at veröffentlicht.<br/>
         Ich freue mich auf viele bunte Zeichnungen und ein spannendes Voting!
         <b>EURE RAIFFEISEN </b><b><i><font color ="#880000">SUMSI</font></i></b>
    </string>
    <string name="home_icon">Home</string>
    <string name="upload_pictures">Upload pictures</string>
    <string name="all_pictures">Photo Library</string>
    <string name="welcome_message"><b>Herzlich Willkommen beim grossen <font color ="#880000">SUMSI</font> Malwettbewerb!</b></string>
    <string name="contest_heading"><b>Der beste Malwettbewerb aller Zeiten.<br>Und so funktioniert es!</br></b></string>
    <string name="join_win_heading">Mach mit &amp; gewinne!<br />
        <b><font color ="#880000">SUMSI</font> freut sich.</b></string>
    <string name="hint_name">Name Erziehungsberechtigte/r</string>
    <string name="hint_email">E-Mail-Adresse zum Verständigen</string>
    <string name="upload">Bild hochladen</string>
    <string name="terms">Zustimmung Datenschutz</string>
    <string name="information_contest" translatable="true">
        <![CDATA[
            <ul>
                <li> Zeichnen &amp; malen</li><br />
                <li> Digitalisieren (Foto oder Scan)</li><br />
                <li> Hochladen und einreichen bis <b> 15. Jänner 2024</b></li><br />
                <li> Die Ausstellung in der Sumsi-Galerie läuft<b> ab 18. Jänner 2024.</b></li><br />
                <li> Mit Glück einen der <b>10 tollen Preise</b> gewinnen.</li><br />
                <li> Die Eltern der Gewinner werden per Mail verständigt.</li><br />
                <li> Der Rechtsweg ist ausgeschlossen.</li><br />
            </ul>
            <p style ="text-align:center;"><b>Ich freue mich auf viele bunte Zeichnungen. Macht mit und schickt mir Eure Träume!</b></p>

            <p style="text-align:center;">Eure Raiffeisen <font color="#880000"><b>SUMSI</b></font></p>
        ]]>
    </string>
    <string name="sumsi_gallery"> <p style="text-align:center;"><b>Herzlich willkommen in der großen <font color="#880000"><b>SUMSI</b></font> Galerie</b></p></string>
    <string name="custom_css">body { font-family: \'@font/swz721le\', sans-serif; }</string>
    <string name="image_name">Image Name</string>
    <string name="showPrivacyDetails" translatable="false">
        <![CDATA[
        <strong>Datenschutzhinweise lt. DSGVO</strong><br>
        <strong>Datenschutzhinweise gem. Art. 13 DSGVO für den Sumsi Malwettbewerb</strong><br>
        <<br>Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend den gesetzlichen Vorschriften. Wir informieren Sie hiermit über die Verarbeitung Ihrer personenbezogenen Daten sowie der Ihres Kindes und der Ihnen zustehenden datenschutzrechtlichen Ansprüche und Rechte.
        Der Inhalt und Umfang der Datenverarbeitung richtet sich maßgeblich nach den jeweils von Ihnen im Rahmen des Malwettbewerbs über das Online-Kontaktformular bekannt gegebenen Informationen.<br>
        <br><strong>Wer ist für die Datenverarbeitung verantwortlich und an wen können Sie sich wenden?</strong><br>
        <br>Für die Datenverarbeitung verantwortlich ist die
        Raiffeisenlandesbank Kärnten- Rechenzentrum und Revisionsverband, registrierte Genossenschaft mit beschränkter Haftung
        Raiffeisenplatz 1 I 9020 Klagenfurt am Wörthersee
        <br><strong> T + 43 406 993 00</strong>
        <br><strong> E info@rbgk.raiffeisen.at</strong>

        <br>Alternativ können Sie sich auch gerne an den Datenschutzbeauftragten wenden:
        Raiffeisenplatz 1 I 9020 Klagenfurt am Wörthersee
        <br><strong> T +43 463 993 00 – 12201</strong><br>

        <br><strong>Welche personenbezogenen Daten werden im Rahmen des Malwettbewerbes verarbeitet?</strong><br>
        <br>Wir verarbeiten jene personenbezogenen Daten, die wir von Ihnen im Rahmen des Malwettbewerbes über das Online-Kontaktformular erhalten haben.
        Zu den personenbezogenen Daten zählen Ihre persönlichen Detailangaben und Kontaktdaten (Vor- und Nachname, E-Mail-Adresse) sowie die Ihres Kindes (Vorname und Alter).
        Für welchen Zweck werden Ihre personenbezogenen Daten sowie die Ihres Kindes verarbeitet?
        Ihre angegebenen personenbezogenen Daten sowie die Ihres Kindes zur Teilnahme am Malwettbewerb werden von der Raiffeisen Landesbank ausschließlich zur Durchführung und Bearbeitung des Malwettbewerbs verwendet.
        Der Vorname Ihres Kindes sowie Ihre E-Mail-Adresse wird für die Ermittlung und Verständigung der Gewinner benötigt und nur zu diesem Zweck verarbeitet.<br>

        <br><strong>Wer erhält die von Ihnen angegebenen personenbezogenen Daten?</strong><br>
        <br>Ihre personenbezogenen Daten sowie die Ihres Kindes erhalten nur jene MitarbeiterInnen der Raiffeisen Landesbank Kärnten, die den Malwettbewerb abwickeln, um die Gewinner ermitteln und verständigen zu können.
        Eine sonstige Weitergabe Ihrer Daten an Dritte erfolgt nicht.<br>

        <br><strong>Wie lange werden Ihre angegebenen personenbezogenen Daten gespeichert?</strong><br>
        <br>Ihre personenbezogenen Daten sowie die Ihres Kindes werden nach Beendigung der Abwicklung des Malwettbewerbs und nach Ermittlung und Verständigung der Gewinner gelöscht. Die Löschung Ihrer Daten sowie jener Ihres Kindes erfolgt mit spätestens 30.11.2020.<br>

        <br><strong>Welche Datenschutzrechte stehen Ihnen zu?</strong><br>
        <br>Sie haben das Recht auf Auskunft, Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer sowie Ihres Kindes gespeicherten Daten, ein Recht auf Datenübertragbarkeit, das Recht auf Widerspruch gegen die Verarbeitung sowie ein Recht auf Widerruf gemäß den Voraussetzungen des Datenschutzrechts.
        Diesbezügliche Anträge können Sie gerne an <strong>datenschutz@rbgk.raiffeisen.at</strong> anrichten.
        Davon unberührt bleibt Ihr Recht, sich bei der zuständige Datenschutzbehörde per E-Mail an <strong>dsb@dsb.gv.at</strong> oder postalisch an Österreichische Datenschutzbehörde, Barichgasse 40-42, 1030 Wien zu beschweren.<br>
        <br>Stand: Oktober 2020
    ]]>
    </string>
    <string name="showTermsAndCondition" translatable="false">
        <![CDATA[
        <strong>Teilnahmebedingungen für den Sumsi Malwettbewerb</strong><br>
        <br>Jeder Elternteil, der vom 19. Oktober bis 5. November 2021 eine Zeichnung seines Kindes (das das 14. Lebensjahr noch nicht vollendet hat) über das vorliegende Kontaktformular einreicht, hat die Chance auf den Hauptgewinn und auf weitere tolle Preise. Alle eingereichten Zeichnungen werden in der großen Sumsi Galerie auf <strong>www.raiffeisen-sumsi.at </strong>veröffentlicht.
        Aus allen eingereichten Zeichnungen werden 10 Zeichnungen gezogen. Auf diese 10 Gewinner warten tolle Preise.<br>
        <br><strong>Mit der Teilnahme am Sumsi Malwettbewerb erklären die Teilnehmer, mit den folgenden Teilnahmebedingungen einverstanden zu sein:</strong><br>
          <br> * Teilnahmeberechtigt sind alle natürlichen Personen.<br>
          <br> * Die Teilnahme am Malwettbewerb ist kostenlos, freiwillig und unabhängig von Bankgeschäften. Die Gewinner werden per Zufallsprinzip ermittelt. Der Rechtsweg ist ausgeschlossen. Gewinne können nicht in bar abgelöst, übertragen oder umgetauscht werden.<br>
          <br> *  Eine Teilnahme über Gewinnspiel-Vereine oder automatisierte Dienste ist nicht gestattet. Pro Person ist nur eine Teilnahme möglich. Der/Die TeilnehmerIn kann im Falle des Gewinnes die Sachpreise innerhalb von 4 Wochen ab elektronischer Verständigung entgegennehmen, danach verfällt dieser Anspruch und der Gewinn.<br>
          <br> *  Der Veranstalter übernimmt keine Haftung für etwaige technische Schwierigkeiten.
          <br> *  Der/Die TeilnehmerIn erklärt, dass seine/ihre Einreichung zum Malwettbewerb (die Zeichnung) nicht gegen die Rechte Dritter, insbesondere Urheberrechte und Persönlichkeitsrechte, verstößt. Er/sie erklärt sich mit der Veröffentlichung der Zeichnung im Rahmen des Malwettbewerbs bzw. auf der Homepage des Veranstalters ausdrücklich einverstanden<br>
          <br> *  Falls andere Personen an der Erstellung der Zeichnung beteiligt waren oder Dritten exklusive Rechte am eingereichten Beitrag eingeräumt wurden, so müssen sich diese mit der Einreichung und späteren Veröffentlichung im Rahmen des Malwettbewerbs einverstanden erklären.<br>
          <br> *  Der Veranstalter behält sich das Recht vor, in bestimmten Anlassfällen von TeilnehmerInnen einen schriftlichen Nachweis für die Erfüllung der oben genannten Voraussetzungen einzufordern. Wird der Nachweis bei Aufforderung nicht erbracht, kann der/die TeilnehmerIn vom Veranstalter von der Teilnahme ausgeschlossen werden.<br>
          <br> *  Der Veranstalter behält sich das Recht vor, TeilnehmerInnen, die gegen die Teilnahmebedingungen, gegen Strafgesetze oder sonstige Vorschriften bzw. die guten Sitten verstoßen oder durch technische Manipulation versuchen, den Malwettbewerb in irgendeiner Form zu beeinflussen, von eben diesem auszuschließen. Im Falle eines Ausschlusses vom Malwettbewerb steht es dem Veranstalter frei, die Gewinne auch noch nachträglich abzuerkennen und zurückzufordern.<br>
          <br> *  Der Veranstalter behält sich das Recht vor, den Malwettbewerb bzw. die Verlosung jederzeit aus wichtigem Grund ohne Vorankündigung zu beenden oder zu unterbrechen. Dies gilt unter anderem, wenn der planmäßige Ablauf des Malwettbewerbs bzw. die Verlosung gestört oder verhindert werden würde. Dem/der TeilnehmerIn erwachsen daraus keinerlei Rechte.<br>
    ]]>
    </string>
</resources>