<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FBF315">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/swz721ml"
            android:textSize="30sp"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/welcome_message" />

        <ImageView
            android:id="@+id/sumsi_logo"
            android:layout_width="257dp"
            android:layout_height="192dp"
            android:contentDescription="@string/sumsi_logo"
            android:src="@drawable/sumsi_logo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/sumsi_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tt0372m"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/sumsi_welcome_message"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>